<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_home_page"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="250dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/name"
        android:background="@drawable/shape"
        android:backgroundTint="@color/title1"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
</RelativeLayout>